--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hung-Jen Hung",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "socket.io": "^2.3.0"
